--- a/page.html
+++ b/page.html
@@ -18,6 +18,8 @@
       })
     </script>
     <title>Merlot GitHub Pages Theme by Someone Awesome</title>
+
+    <!-- Hey there ! I see you watching the code ! Hf ahahahah -->
   </head>
 
   <body>
